--- a/View/Cell/AlertCell.xib
+++ b/View/Cell/AlertCell.xib
@@ -10,26 +10,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AlertCell" customModule="ReminderWater" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="370" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="370" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pd-dp-5f4">
-                        <rect key="frame" x="20" y="26" width="49" height="34"/>
+                        <rect key="frame" x="20" y="28" width="49" height="34"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z0Z-AK-wKH">
-                        <rect key="frame" x="69" y="-8" width="132" height="60"/>
+                        <rect key="frame" x="69" y="10" width="132" height="60"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="50"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0bp-xm-Cwy">
-                        <rect key="frame" x="251" y="6.6666666666666679" width="51" height="31.000000000000004"/>
+                        <rect key="frame" x="301" y="24.666666666666671" width="51" height="31"/>
                         <connections>
                             <action selector="alertSwitchValue:" destination="KGk-i7-Jjw" eventType="valueChanged" id="lzP-YZ-gGU"/>
                         </connections>
@@ -41,7 +41,7 @@
                     <constraint firstItem="6pd-dp-5f4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Sca-7T-ERC"/>
                     <constraint firstAttribute="trailing" secondItem="0bp-xm-Cwy" secondAttribute="trailing" constant="20" id="eo8-a6-Zmz"/>
                     <constraint firstItem="Z0Z-AK-wKH" firstAttribute="leading" secondItem="6pd-dp-5f4" secondAttribute="trailing" id="jXZ-6A-k4M"/>
-                    <constraint firstItem="Z0Z-AK-wKH" firstAttribute="bottom" secondItem="6pd-dp-5f4" secondAttribute="bottom" constant="-8" id="wJ6-Od-hdd"/>
+                    <constraint firstItem="Z0Z-AK-wKH" firstAttribute="bottom" secondItem="6pd-dp-5f4" secondAttribute="bottom" constant="8" id="wJ6-Od-hdd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
